Fixed text overlapping bug

--- a/src/components/education/education.module.css
+++ b/src/components/education/education.module.css
@@ -2,7 +2,8 @@
   display: flex;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   justify-content: flex-start;
   align-items: center;
 }
