--- a/src/components/introduction/introduction.module.css
+++ b/src/components/introduction/introduction.module.css
@@ -1,7 +1,8 @@
 .introduction {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background-image: linear-gradient(black, rgb(44, 44, 44));
   justify-content: flex-end;
 }
